Revert "fix back button hyperlink visibility issue on edit NoW page"
This reverts commit 396bd605e66b525a4ad915b15f508d403d4d135c.

--- a/services/core-web/src/styles/components/NoticeOfWork.scss
+++ b/services/core-web/src/styles/components/NoticeOfWork.scss
@@ -92,7 +92,7 @@
       padding: 10px;
       position: fixed;
       width: 100vw;
-      top: -24px;
+      top: -20px;
       background-color: white;
       z-index: 50;
     }
@@ -127,7 +127,7 @@
   left: 0;
 
   &--fixed {
-    top: 130px;
+    top: 134px;
     position: fixed;
     width: 240px;
 
